--- a/src/IotDemo.DeviceEmulator/packages.config
+++ b/src/IotDemo.DeviceEmulator/packages.config
@@ -8,7 +8,9 @@
   <package id="DotNetty.Transport" version="0.4.6" targetFramework="net461" />
   <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.Azure.Amqp" version="2.0.6" targetFramework="net461" />
+  <package id="Microsoft.Azure.Devices" version="1.4.1" targetFramework="net461" />
   <package id="Microsoft.Azure.Devices.Client" version="1.5.2" targetFramework="net461" />
   <package id="Microsoft.Azure.Devices.Shared" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
