--- a/src/AdminPortal/bower.json
+++ b/src/AdminPortal/bower.json
@@ -7,6 +7,7 @@
     "jquery-validation": "1.14.0",
     "jquery-validation-unobtrusive": "3.2.6",
     "angular": "^1.6.7",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "bootstrap-toggle": "^2.2.2"
   }
 }
