--- a/src/IotDemo.DeviceEmulator/packages.config
+++ b/src/IotDemo.DeviceEmulator/packages.config
@@ -21,10 +21,12 @@
   <package id="Microsoft.Extensions.Logging" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
-  <package id="Microsoft.ServiceFabric" version="5.7.198" targetFramework="net461" />
-  <package id="Microsoft.ServiceFabric.Data" version="2.7.198" targetFramework="net461" />
-  <package id="Microsoft.ServiceFabric.Diagnostics.Internal" version="2.7.198" targetFramework="net461" />
-  <package id="Microsoft.ServiceFabric.Services" version="2.7.198" targetFramework="net461" />
+  <package id="Microsoft.ServiceFabric" version="6.0.232" targetFramework="net461" />
+  <package id="Microsoft.ServiceFabric.Data" version="2.8.232" targetFramework="net461" />
+  <package id="Microsoft.ServiceFabric.Diagnostics.Internal" version="2.8.232" targetFramework="net461" />
+  <package id="Microsoft.ServiceFabric.FabricTransport.Internal" version="2.8.232" targetFramework="net461" />
+  <package id="Microsoft.ServiceFabric.Services" version="2.8.232" targetFramework="net461" />
+  <package id="Microsoft.ServiceFabric.Services.Remoting" version="2.8.232" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net461" />
