extra logging and actor stuff

--- a/src/AdminPortal/AdminPortal.csproj
+++ b/src/AdminPortal/AdminPortal.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\IotDemo.DeviceEmulator\IotDemo.DeviceEmulator.csproj" />
+    <ProjectReference Include="..\IoTDemo.IoTDeviceActor.Interfaces\IoTDemo.IoTDeviceActor.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
