--- a/src/IoTDemo.IoTDeviceActor/packages.config
+++ b/src/IoTDemo.IoTDeviceActor/packages.config
@@ -7,4 +7,5 @@
   <package id="Microsoft.ServiceFabric.FabricTransport.Internal" version="2.8.232" targetFramework="net461" />
   <package id="Microsoft.ServiceFabric.Services" version="2.8.232" targetFramework="net461" />
   <package id="Microsoft.ServiceFabric.Services.Remoting" version="2.8.232" targetFramework="net461" />
+  <package id="WindowsAzure.ServiceBus" version="4.1.6" targetFramework="net461" />
 </packages>
