--- a/src/IoTDemo.IoTDeviceActor/packages.config
+++ b/src/IoTDemo.IoTDeviceActor/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DnsClient" version="1.0.7" targetFramework="net461" />
   <package id="Microsoft.ServiceFabric" version="6.0.232" targetFramework="net461" />
   <package id="Microsoft.ServiceFabric.Actors" version="2.8.232" targetFramework="net461" />
   <package id="Microsoft.ServiceFabric.Data" version="2.8.232" targetFramework="net461" />
@@ -7,5 +8,10 @@
   <package id="Microsoft.ServiceFabric.FabricTransport.Internal" version="2.8.232" targetFramework="net461" />
   <package id="Microsoft.ServiceFabric.Services" version="2.8.232" targetFramework="net461" />
   <package id="Microsoft.ServiceFabric.Services.Remoting" version="2.8.232" targetFramework="net461" />
+  <package id="MongoDB.Bson" version="2.5.0" targetFramework="net461" />
+  <package id="MongoDB.Driver" version="2.5.0" targetFramework="net461" />
+  <package id="MongoDB.Driver.Core" version="2.5.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
   <package id="WindowsAzure.ServiceBus" version="4.1.6" targetFramework="net461" />
 </packages>
