--- a/src/IoTDemo.IoTDeviceActor/IoTDemo.IoTDeviceActor.csproj
+++ b/src/IoTDemo.IoTDeviceActor/IoTDemo.IoTDeviceActor.csproj
@@ -125,6 +125,7 @@
     <Compile Include="IoTDeviceActor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ActorEventSource.cs" />
+    <Compile Include="PropMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="PackageRoot\ServiceManifest.xml" />
